--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
 	</head>
 	<body>
 		<a style="font-size: larger;"  href="http://41472p1u43.zicp.vip:9099">凯华计算机服务中心</a>
+		<a style="font-size: larger;"  href="http://183.191.28.9:9099">凯华计算机服务中心</a>
 	</body>
 </html>
